@@ -6,9 +6,10 @@
 #include "Python.h"
 #include "../Objects/stringlib/stringdefs.h"
 
-#define FORMAT_STRING _PyBytes_FormatAdvanced
-#define FORMAT_LONG   _PyLong_FormatAdvanced
-#define FORMAT_INT    _PyInt_FormatAdvanced
-#define FORMAT_FLOAT  _PyFloat_FormatAdvanced
+#define FORMAT_STRING  _PyBytes_FormatAdvanced
+#define FORMAT_LONG    _PyLong_FormatAdvanced
+#define FORMAT_INT     _PyInt_FormatAdvanced
+#define FORMAT_FLOAT   _PyFloat_FormatAdvanced
+#define FORMAT_COMPLEX _PyComplex_FormatAdvanced
 
 #include "../Objects/stringlib/formatter.h"
